--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "npm start",
   "scripts": {
-    "start": "browser-sync start -s . -f ."
+    "start": "browser-sync start -p 'https://gft365.sharepoint.com/sites/testowa' -f . "
   },
   "repository": {
     "type": "git",
