--- a/package.json
+++ b/package.json
@@ -1,22 +1,45 @@
 {
-  "name": "portfolio-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "npm start",
+  "name": "portfolio-app-v2",
+  "version": "0.0.1",
+  "description": "Portfolio App",
+  "productName": "Portfolio App",
+  "author": "Piotr Kosmowski <kospiotr@gmail.com>",
+  "private": true,
   "scripts": {
-    "start": "browser-sync start -p 'https://gft365.sharepoint.com/sites/testowa' -f . "
+    "dev": "quasar dev",
+    "build": "quasar build",
+    "lint": "eslint --ext .js,.ts,.vue ./",
+    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "test": "echo \"No test specified\" && exit 0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kospiotr/portfolio-app.git"
+  "dependencies": {
+    "@quasar/cli": "^1.3.2",
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.1",
+    "firebase": "^9.13.0",
+    "pinia": "^2.0.11",
+    "pinia-plugin-persistedstate": "^2.1.0",
+    "quasar": "^2.6.0",
+    "vue": "^3.0.0",
+    "vue-i18n": "^9.0.0",
+    "vue-router": "^4.0.0"
   },
-  "author": "Piotr Kosmowski",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kospiotr/portfolio-app/issues"
-  },
-  "homepage": "https://github.com/kospiotr/portfolio-app#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.14"
+    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
+    "@quasar/app-vite": "^1.0.0",
+    "@types/node": "^12.20.21",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
+  },
+  "engines": {
+    "node": "^18 || ^16 || ^14.19",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
   }
 }
